# OG-UK

./: .buildinfo  .gitignore  CHANGELOG.md  Makefile  OGUKdemog.ipynb  PSL_catalog.json  README.md  SKILL.md  codecov.yml  environment.yml  genindex.html  objects.inv  plot.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  small_ubi_reform.py
.github/: has-functional-changes.sh  is-version-number-acceptable.sh
.github/workflows/: build_and_test.yml  check_black.yml  ci.yml  deploy_docs.yml  docs_check.yml  pr.yaml  push.yaml  version_check.yml
_modules/: index.html
_modules/og_uk_calibrate/: calibrate.html  get_micro_data.html  txfunc.html
_modules/oguk/: calibrate.html  demographics.html  get_micro_data.html
content/: OGUK_references.html  citations.html
content/api/: calibrate.html  demographics.html  get_micro_data.html  public_api.html  txfunc.html
content/calibration/: tax_functions.html
content/contributing/: contributor_guide.html
content/intro/: intro.html
docs/: README.md
docs/book/: OGUK_references.bib  _toc.yml  (+2 more)
examples/: plot.py  run_og_uk.py  run_oguk.py  run_oguk_simple.py
og_uk_calibrate/: calibrate.py  demographics.py  get_micro_data.py  macro_params.py  parameter_plots.py  txfunc.py
oguk/: OGUKdemog.ipynb  __init__.py  api.py  calibrate.py  demographics.py  get_micro_data.py  industry_params.py  macro_params.py  oguk_default_parameters.json  sources.py
oguk_calibrate/: demographics.py  get_micro_data.py
oguk_calibration/: calibrate.py  demographics.py  get_micro_data.py  txfunc.py
scripts/: check_ss_revenue.py  ct_charts_plotly.py  ct_reexport.py  ct_tpi_results.xlsx  productivity_headroom.py  refresh_calibration.py  run_ct_and_export.py  run_tpi_and_export.py  tpi_charts.html  tpi_charts_plotly.py  tpi_results.xlsx
tests/: test_demographics.py  test_get_micro_data.py  test_run_example.py
(+45 files in other folders)
